Update Laptop Price Regression End-to-End.ipynb

--- a/Laptop Prices Regression End-to-End.ipynb
+++ b/Laptop Prices Regression End-to-End.ipynb
@@ -5,7 +5,7 @@
    "id": "bc662a89",
    "metadata": {},
    "source": [
-    "# Laptop Prices Prediction - Machine Learning regression\n",
+    "# Laptop Price Prediction - Machine Learning regression\n",
     "\n",
     "## Problem Definition\n",
     "\n",
@@ -23,7 +23,7 @@
     "\n",
     "## Evaluation Metric\n",
     "\n",
-    "For the proper evaluation we gonna calculate:\n",
+    "For the proper evaluation, we gonna calculate:\n",
     "\n",
     "* Root Mean Squared Error (RMSE)\n",
     "* R-squared (R²) Score\n",
@@ -57,7 +57,7 @@
     "\n",
     "## Preparing the tools\n",
     "\n",
-    "We're going to use pandas, Matplotlib and NumPy for data analysis and manipulation. For our models we'll work with the following:\n",
+    "We're going to use pandas, Matplotlib, and NumPy for data analysis and manipulation. For our models, we'll work with the following:\n",
     "\n",
     "* Random Forest Regressor\n",
     "* Linear Regression\n",
@@ -885,7 +885,7 @@
    "id": "72035431",
    "metadata": {},
    "source": [
-    "The processor's generation can impact greatly in a machine's final price. Altought we gonna lose a big number of samples, we gonna choose to drop all the rows with \"Not Available\" values that we transformed into NaN value."
+    "The processor's generation can impact greatly a machine's final price. Although we gonna lose a large number of samples, we gonna choose to drop all the rows with \"Not Available\" values that we transformed into NaN values."
    ]
   },
   {
